# ghost-sph-cs

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/commons/: controls.cpp  controls.h  loadshader.cpp  loadshader.h
src/physics/: solid.cpp  solid.h  sphere.cpp  sphere.h
src/shaders/: computeShader.glsl  fragmentShader.glsl  obj_fragmentShader.glsl  obj_vertexShader.glsl  particle_computeShader.glsl  particle_fragmentShader.glsl  particle_geometryShader.glsl  particle_vertexShader.glsl  vertexShader.glsl
src/tools/: utils.cpp  utils.h
